adjust code after sonarlint review and adding sonarQube in cicd for pipeline